[metadata]
name = chart-vendor
summary = Tool for vendoring Helm charts into a Git repository
description_file = README.md
description_content_type = text/markdown
author = VEXXHOST, Inc.
author_email = support@vexxhost.com
url = https://github.com/vexxhost/chart-vendor
project_urls =
    Bug Tracker = https://github.com/vexxhost/chart-vendor/issues
    Documentation = https://vexxhost.github.io/chart-vendor/
    Source Code = https://github.com/vexxhost/chart-vendor
python_requires = >=3.8
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    chart_vendor

[entry_points]
console_scripts =
    chart-vendor = chart_vendor.cli:main
